--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,20 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              {
+                "input":"node_modules/primeng/resources/themes/vela-green/theme.css",
+                "bundleName": "dark",
+                "inject":false
+              },
+              {
+                "input":"node_modules/primeng/resources/themes/saga-green/theme.css",
+                "bundleName": "light",
+                "inject":false
+              },
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeflex/primeflex.css"
             ],
             "scripts": []
           },
@@ -44,8 +57,8 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "100kb",
+                  "maximumError": "100kb"
                 }
               ],
               "outputHashing": "all"
@@ -93,12 +106,28 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              {
+                "input":"node_modules/primeng/resources/themes/vela-green/theme.css",
+                "bundleName": "dark",
+                "inject":false
+              },
+              {
+                "input":"node_modules/primeng/resources/themes/saga-green/theme.css",
+                "bundleName": "light",
+                "inject":false
+              },
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeflex/primeflex.css"
             ],
             "scripts": []
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "df96d6ef-f464-47fb-b11f-f787fa634687"
   }
 }
